# mail-semantic-search

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CODEBASE_ANALYSIS.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/scripts/: require-version-bump.sh
.github/workflows/: pr-title.yml  release.yml  version-bump.yml
docs/superpowers/plans/: 2026-05-14-public-repo.md
docs/superpowers/specs/: 2026-05-14-public-repo-design.md  2026-05-15-list-inbox-emails-tool-design.md  2026-05-15-open-email-url-tool-design.md  2026-05-15-release-infrastructure-design.md
mail_semantic_search/: __init__.py  cli.py  config.py  database.py  embedding_service.py  html_extract.py  index.py  mailmate_actions.py  mailmate_reader.py  mcp_server.py  query.py  query_parser.py  reranker.py  runtime_logging.py  search.py  service_models.py  staging.py  vector_store.py  version.py
mailmate_search/: __init__.py  attachment_extractor.py  cli.py  config.py  database.py  embedding_service.py  index.py  mailmate_reader.py  mcp_server.py  query.py  query_parser.py  reranker.py  runtime_logging.py  search.py  service_models.py  vector_store.py
tests/: test_backfill_lock.py  test_body_selection.py  test_dedup.py  test_extraction_version.py  test_html_extract.py  test_inbox.py  test_mcp_server.py  test_prune.py  test_staging.py  test_version.py
tests/fixtures/: national_grid_marketing.html
