[project]
name = "mail-semantic-search"
# Version is derived from git tags by setuptools-scm (see [tool.setuptools_scm]).
# Do NOT add a static `version` here — releases are automatic; see AGENTS.md.
dynamic = ["version"]
description = "Local semantic search for email files using embeddings and vector search"
requires-python = ">=3.10"
dependencies = [
    "sentence-transformers>=2.2.0",
    "chromadb>=0.4.0",
    "click>=8.1.0",
    "fastmcp",
    "python-dotenv>=1.0.0",
    "tqdm>=4.65.0",
    "unquotemail>=0.1.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "html2text>=2024.2.26",
    "pdfplumber>=0.10.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "python-pptx>=0.6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
mail-semantic-search = "mail_semantic_search.cli:main"
mail-semantic-search-mcp = "mail_semantic_search.mcp_server:main"

[tool.setuptools]
packages = ["mail_semantic_search"]

[build-system]
requires = ["setuptools>=61.0", "setuptools_scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
# Version comes from the latest `v*` git tag. Untagged commits get a PEP 440
# dev version (e.g. 0.9.1.dev3+g<sha>). In Docker the build can't see .git, so
# the release workflow passes SETUPTOOLS_SCM_PRETEND_VERSION via build-arg.
fallback_version = "0.0.0.dev0"

[tool.semantic_release]
# Tag-only mode: PSR computes the next version from Conventional Commits and
# creates the `vX.Y.Z` tag + GitHub Release. It does NOT write the version into
# any source file (no version_toml/version_variables) and the workflow runs it
# with commit=false/changelog=false, so nothing is committed back to main.
tag_format = "v{version}"
commit_parser = "conventional"
allow_zero_version = true   # stay on 0.x
major_on_zero = false       # breaking changes bump minor while < 1.0.0
build_command = ""          # no PyPI build; the Docker image is built separately

[tool.semantic_release.branches.main]
match = "main"
prerelease = false


